# remote-apis

./: MODULE.bazel  WORKSPACE  go.mod
internal/: googleapis.bzl  non_module_deps.bzl
