module(name = "bazel_remote_apis", version = "0.0.0")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "grpc", version = "1.48.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.43.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

non_module_deps = use_extension("//internal:non_module_deps.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "googleapis",
)

googleapis = use_extension("//internal:googleapis.bzl", "googleapis")
use_repo(
    googleapis,
    "com_google_googleapis_imports",
)
